--- a/cmd/registry/config.yml
+++ b/cmd/registry/config.yml
@@ -13,20 +13,20 @@ http:
     addr: :5001
 auth:
   token:
-    realm: http://10.0.105.140:8082/v1/registry/auth
+    realm: http://192.168.21.175:8082/v1/registry/callback/auth
     service: "Local Registry Server"
     issuer: "Local Registry Auth Service"
     rootcertbundle: /etc/registry/root.crt
-#notifications:
-#  endpoints:
-#    - name: alistener
-#      disabled: false
-#      url: http://192.168.21.117:8080/v1/registry/event
-#      headers:
-#        Authorization:
-#        - just4fun
-#      timeout: 500ms
-#      threshold: 5
-#      backoff: 3s
-#      ignoredmediatypes:
-#        - application/octet-stream
+notifications:
+  endpoints:
+    - name: alistener
+      disabled: false
+      url: http://192.168.21.175:8082/v1/registry/callback/event
+      headers:
+        Authorization:
+        - just4fun
+      timeout: 500ms
+      threshold: 5
+      backoff: 3s
+      ignoredmediatypes:
+        - application/octet-stream
