--- a/cmd/registry/auth_config.yml
+++ b/cmd/registry/auth_config.yml
@@ -1,12 +1,22 @@
 server:
   addr: ":8082"
+  debug: true
 token:
   issuer: "Local Registry Auth Service"
   expiration: 900
   certificate: "./root.crt"
   key: "./private_key.pem"
+db:
+  host: "192.168.21.175"
+  port: 3306
+  user: "root"
+  password: "123456"
+  name: "boxlinker"
 auth:
-  url: "http://127.0.0.1:8080/v1/user/account/authToken"
+#  tokenAuthUrl: "https://ucenter.boxlinker.com/api/v1.0/ucenter/tokens"
+#  basicAuthUrl: "https://ucenter.boxlinker.com/api/v1.0/ucenter/tokens"
+  tokenAuthUrl: "https://api.boxlinker.com/v1/user/account/authToken"
+  basicAuthUrl: "https://api.boxlinker.com/v1/user/auth/basicAuth"
 acl:
   - match: {account: "admin"}
     actions: ["*"]   #如果写 push 了，pull 就必须也写上
