--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -36,3 +36,9 @@ services:
     environment:
     - MYSQL_DATABASE=boxlinker
     - MYSQL_ROOT_PASSWORD=123456
+  registry:
+    image: registry:2
+    volumes:
+    - ./registry_data:/var/lib/registry
+    - ./registry/config.yml:/etc/docker/registry/config.yml
+
