--- a/Dockerfile.volumes
+++ b/Dockerfile.volumes
@@ -1,6 +1,14 @@
-FROM ubuntu:14.04
+FROM golang:1.8
 
 RUN apt-get update -y
 
 RUN apt-get install librados-dev librbd-dev
 
+WORKDIR /go/src/app
+
+COPY . .
+
+RUN go-wrapper download   # "go get -d -v ./..."
+RUN go-wrapper install    # "go install -v ./..."
+
+CMD ["go-wrapper", "run"] # ["app"]
