--- a/Dockerfile.registry
+++ b/Dockerfile.registry
@@ -2,7 +2,7 @@ FROM alpine:latest
 RUN apk update
 RUN apk add ca-certificates
 RUN apk add tzdata
-
+RUN cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 RUN mkdir /app
 RUN mkdir /ssl
 COPY ./cmd/registry/image-api /app/image-api
