--- a/cmd/registry-watcher/config.yml
+++ b/cmd/registry-watcher/config.yml
@@ -4,8 +4,8 @@ server:
 auth:
   registryAuthorization: "just4fun"
 amqp:
-  host: ""
-  exchange: ""
-  exchangeType: ""
-  routingKey: ""
+  host: "amqp://guest:guest@localhost:5672/"
+  exchange: "registry-watcher"
+  exchangeType: "fanout"
+  routingKey: "registry-watcher-key"
   reliable: true
