--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,7 @@ cmd/email/email
 cmd/user/user
 cmd/registry/image-api
 cmd/application/application
+cmd/registry-watcher/registry-watcher
+cmd/rolling-update/rolling-update
 vendor
 dev/registry_data
