--- a/cmd/user/.env.prod
+++ b/cmd/user/.env.prod
@@ -2,20 +2,22 @@ LISTEN=:8080
 DEBUG=true
 
 TOKEN_KEY=a_random_user_token_key_887987
-SEND_EMAIL_URI=https://api.boxlinker.com/v1/email/send
-SEND_REG_MESSAGE_API=http://localhost:8080/v1/application/auth/event/reg_message
-RESET_PASS_CALLBACK_URI=http://localhost:3000/reset-pass
+SEND_EMAIL_URI=http://email:8080/v1/email/send
+SEND_REG_MESSAGE_API=http://application:8080/v1/application/auth/event/reg_message
+VERIFY_EMAIL_URI=https://api.boxlinker.com/v1/user/auth/confirm_email
+RESET_PASS_CALLBACK_URI=https://console.boxlinker.com/reset-pass
 CONFIRM_EMAIL_TOKEN_SECRET=arandomconfirmemailtokensecret
+
 ADMIN_NAME=boxlinker
 ADMIN_PASSWORD=QAZwsx123
 ADMIN_EMAIL=service@boxlinker.com
-USER_PASSWORD_SALT=arandomuserpasswordsalt
-COOKIE_DOMAIN=localhost
+USER_PASSWORD_SALT=a_random_user_password_salt
+COOKIE_DOMAIN=.boxlinker.com
 
 DB_USER=boxlinker
 DB_PASSWORD=FB07ObC7xeTu
-DB_HOST=boxlinker.com
-DB_PORT=13306
+DB_HOST=mysql
+DB_PORT=3306
 DB_NAME=boxlinker
 
 AMQP_URI=amqp://guest:guest@localhost:5672/
